--- a/src/components/Controller/FormController/AddingFormController.module.css
+++ b/src/components/Controller/FormController/AddingFormController.module.css
@@ -1,5 +1,5 @@
 .formControllerContainer {
-  display: "flex";
-  justify-content:  "center";
-  flex-direction: "column";
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
