--- a/src/components/AdminPages/AddingPage/AddingPage.module.css
+++ b/src/components/AdminPages/AddingPage/AddingPage.module.css
@@ -1,10 +1,7 @@
 .addingPage {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    padding-top: 3rem;
-}
-
-.formContainer {
-    /* width: 50%; */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding-top: 3rem;
+  width: 70%;
 }
