--- a/src/components/AdminPages/ListingPage/ListingPage.module.css
+++ b/src/components/AdminPages/ListingPage/ListingPage.module.css
@@ -1,6 +1,7 @@
 .listingPage {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    padding-top: 3rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding-top: 3rem;
+  width: 70%;
 }
