Food Adding Feature is Added

--- a/src/components/Controller/FormController/AddingFormController.module.css
+++ b/src/components/Controller/FormController/AddingFormController.module.css
@@ -1,5 +1,5 @@
-.formControllerContainer {
+/* .formControllerContainer {
   display: flex;
-  justify-content: center;
-  width: 30%;
-}
+  justify-content: flex-start; */
+  /* width: 40%;
+} */
