--- a/src/components/Controller/ListController/ListingController.module.css
+++ b/src/components/Controller/ListController/ListingController.module.css
@@ -1,6 +1,6 @@
-.listControllerContainer {
+/* .listControllerContainer {
     display: flex;
     justify-content:  center;
-    width: 30%;
-  }
+    width: 40%;
+  } */
   
