--- a/src/components/AdminPages/MainPage/MainPage.module.css
+++ b/src/components/AdminPages/MainPage/MainPage.module.css
@@ -24,18 +24,16 @@
 }
 
 .title {
-    font-family: serif;
-    /* font-size: 2.4vw; */
+    font-family: Arial;
+    letter-spacing: 0.01071em;
     font-size: calc(1 * (2.5vh + 1vw));
     font-weight: bold;
-    width: auto;
 }
 
 .titleInfo {
-    font-family: serif;
-    /* font-size: 1.4vw; */
+    font-family: Arial;
     font-size: calc(.6 * (2.5vh + 1vw));
-
+    letter-spacing: 0.01071em;
 }
 
 .wheelDiv {
